--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon backend/index.js --watch backend/index.js"
+    "front": "cd frontend && yarn begin",
+    "back": "nodemon backend/index.js --watch backend/index.js",
+    "start": "npm-run-all --parallel front back"
   },
   "dependencies": {
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "npm-run-all": "^4.1.5"
   }
 }
